--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ server.servlet.context-path=/invoise
 
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=en_US
+
+spring.datasource.url=jdbc:mysql://localhost:3306/invoise?useSSL=false
+spring.datasource.username=COURSDB
+spring.datasource.password=COURSDB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
