--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/invoise?useSSL=false
 spring.datasource.username=COURSDB
 spring.datasource.password=COURSDB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format.sql=true
+
+
+spring.jpa.generate-ddl=false
+spring.sql.init.mode=always
