--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.jpa.properties.hibernate.format.sql=true
 spring.jpa.generate-ddl=false
 spring.sql.init.mode=always
 
+spring.jpa.open-in-view=false
